<resources>
    <string name="app_name">모아모아</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="nicName">닉네임</string>

    <string name="hint_id">아이디(6~15자)</string>
    <string name="hint_password">비밀번호(숫자,영문,특수문자 조합 최소8자)</string>
    <string name="hint_password_check">비밀번호 확인</string>
    <string name="hint_nicName">닉네임</string>
    <string name="hint_name">이름</string>
    <string name="hint_mobileNO">전화번호</string>
    <string name="hint_email">E-mail</string>

    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="select_region">지역 선택</string>
    <string name="duplicate_check">중복확인</string>

    <string name="error_name">이름을 입력해주세요</string>
    <string name="error_nicName">닉네임을 입력해주세요</string>

    <string name="restaurant">식당</string>
    <string name="cafe">카페</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="permission_1"><![CDATA[[설정] > [권한] 에서 권한을 허용할 수 있습니다.]]></string>
</resources>